--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-pandas==2.0.3
-numpy==1.24.3
+# Web Server & API
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+
+# Data Processing
+pandas==2.1.3
+numpy==1.26.2
+
+# Machine Learning & Statistics
 statsmodels==0.14.0
-scikit-learn==1.3.0
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
+scikit-learn==1.3.2
 joblib==1.3.2
+
+# Utilities
 python-dotenv==1.0.0
-tqdm==4.65.0
+tqdm==4.66.1
